--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
         <span role="image" aria-label="Иконка волшебника">***</span>
     </button>
     <script src="./first.js" type="module"></script>
+    <script src="./second.js" type="module"></script>
+    <script src="./third.js" type="module"></script>
 </body>
 </html>
