--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- <script src="./first.js" type="module"></script> -->
     <!-- <script src="./second.js" type="module"></script> -->
     <!-- <script src="./third.js" type="module"></script> -->
-    <script src="./fourth.js" type="module"></script>
+    <!-- <script src="./fourth.js" type="module"></script> -->
+    <script src="./fiveth_module.js" type="module"></script>
 </body>
 </html>
